# devconfig

./: .gitignore  .secrets.example  .tmux.conf  .vimrc  .zshrc  Brewfile  CLAUDE.md  Readme.md  TESTING.md  aerospace.toml  bootstrap.sh  create-fullstack-wt  first-video  flake.nix  ghostty.config  home.nix  lazygit.yml  macos-licenses.md.template  macos-manual-apps.md  makefile  opencode.json  second-video.txt  secrets.example  setup.sh  tmux-cheatsheet.md  tools.md  update.sh  vim-cheatsheet.md  wezterm.lua
agent-guide-db/: generic.json  python.json  rust.json  typescript.json
aliases/: chartering.sh  kpler.sh  macos-apps.sh  personal.sh
claude/: CLAUDE.md  settings.json
clippy/: pyproject.toml
clippy/clippy/: __init__.py  cli.py  clipboard.py  daemon.py  hotkey.py  picker.py  storage.py
clippy/service/: com.clippy.daemon.plist
devconfig-cli/: pyproject.toml
devconfig-cli/devconfig/: __init__.py  __main__.py  cli.py
devconfig-cli/devconfig/agent_guide/: __init__.py  cli.py  config.py  models.py
devconfig-cli/devconfig/agent_guide/agents/: __init__.py  prompts.py  runner.py
devconfig-cli/devconfig/agent_guide/db/: __init__.py  store.py
devconfig-cli/devconfig/agent_guide/generators/: __init__.py  claude_gen.py  cursor_gen.py  windsurf_gen.py
devconfig-cli/devconfig/agent_guide/tui/: __init__.py  app.py
devconfig-cli/devconfig/agent_guide/tui/screens/: __init__.py  block_select.py  diff_resolve.py  preferences.py  review.py
iterm/: README.md
prompt-reformat/: com.user.prompt-reformat.plist  main.py  pyproject.toml  reformat.py
scripts/: ax  (+21 more)
(+58 files in other folders)
