[project]
name = "devconfig"
version = "0.1.0"
description = "Developer configuration tools CLI"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "textual>=0.40.0",
    "pydantic>=2.0",
]

[project.scripts]
devconfig = "devconfig.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
